# radare2-r2pipe

./: .gitignore  Makefile  Makefile.acr  Package.swift  README.md  configure  configure.acr
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
api/: README.md  test.py
api/r2api/: __init__.py
asmjs/: Makefile  README.md  index.js  nodetest.js  package.json  test.js  webtest.html
c/: Makefile  README.md  test-pipe.c  test-pipe2.c  test-spawn.c
c/bare/: Makefile  example-both.c  example-dlopen.c  example-spawn.c  r2pipe.inc.c
c/r2/: README.md  test-pipe.c  test-pipe2.c
clojure/: README.md  project.clj
crystal/: Makefile  core.cr
cxx-qt/: check.sh  r2pipe-api.cxx  r2pipe.cxx  r2pipe.h  r2pipe.pro  test.cxx
dart/: Makefile  README.md  pubspec.yaml  r2pipe-ffi.dart  r2pipe-r2js.dart
dlang/: Makefile  r2pipe.d  test.d
dotnet/: .gitignore  Directory.Build.props  LICENSE  Makefile  README.md  http.cs  main.cs  r2pipe.cs  r2pipe.csproj.nuspec  r2pipe.sln
dotnet/DllExample/: DllExample.csproj  Program.cs
dotnet/FSharpExample/: Makefile  test.fs
dotnet/r2pipe/: CmdQueue.cs  (+18 more)
erlang/: LICENSE  ORIGIN  README.md  rebar.config  testr2pipe.erl
go/: LICENSE  Makefile  ORIGIN  README  README.md  api.go  errside_test.go  example.go  go.mod  main.go  native.go  r2pipe.go  r2pipe_native_test.go  r2pipe_test.go
haskell/: .gitignore  LICENSE  R2Pipe.hs  R2pipe.hs  example_r2pipe.hs  r2pipe.cabal  r2pipe.hs
java/: Makefile  config.mk  pom.xml
lisp/: main.lisp  r2pipe.lisp
newlisp/: Makefile  main.lsp  r2pipe.lsp  test-lib.lsp  test-spawn.lsp
nim/: Makefile  main.nim  r2pipe.nim
nodejs/: Makefile  README.md  index.js  package.json  promise.js  sync.js  test-io.js  test.js  testr2.js  util.js
ocaml/: .gitignore  .merlin  ORIGIN  README.md  _oasis  jbuild  r2.ml  radare2.opam  setup.ml
ocaml-r2/: META.in  Makefile  README.md  opam  r2pipe.ml
perl/: MANIFEST  Makefile  Makefile.PL  README.md  test.pl
php/: poc.php
prolog/: r2pipe.pl
python/: MANIFEST.in  Makefile  README.md  README.rst  README.txt  TODO  dbgtest.py  except.py  ipython.py  lang-pipe.py  main.py  pyproject.toml  python-wrapper  run_tests.sh  setup.cfg  setup.py  test.py
python-async/: LICENSE  Makefile  TODO  ipython.py  lang-pipe.py  setup.py
python/examples/: 010-to-r2.py  batch.py  bug.py  ccall.py  libgraph.py  native.py  test-backends.py  test.py  test2.py
python/examples/sync/: talkto.py
python/examples/syscall/: int.py  int.r2
python/r2pipe/: __init__.py  native.py  open_async.py  open_base.py  open_sync.py
python/test/: README_TESTS.md  ccall.py  ls  mock_r2_server.py  race.py  race.sh  test_async_enhanced.py  test_error_handling.py  test_integration.py  test_native_enhanced.py  test_network.py  test_sync_enhanced.py  test_unit.py
r2core-js/: Makefile  README.md  index.js  package.json  webtest.html
rexx/: README.md  r2pipe.rexx
ruby/: Makefile  README.md  r2pipe.rb  test.rb
rust/: Cargo.toml  LICENSE  Makefile  ORIGIN  README.md
rust/examples/: Makefile  main.rs  quit.rs
rust/r2pipe/: Cargo.toml  Makefile
rust/src/: lib.rs  main.rs  pipe.rs  r2pipe.rs
rust/src/examples/: example1.rs  json.rs  main.rs  rlang.rs
shell/: Makefile  r2cmd.c  r2pipe.sh  test.sh
swift/: Cartfile  Makefile  Package.swift  README.md  main.swift  r2pipe.swift  r2pipeEnv.swift  r2pipeNative.swift  r2pipeSpawn.swift
tcl/: Makefile  README.md  r2pipe.tcl  test.tcl  tmptest.tcl
typescript/: Makefile  README.md  lo.ts  package-lock.json  package.json  test-http.ts  test-local.ts  test-spawn.ts  test.ts  tsconfig.json  tsconfig.tests.json
v/: Makefile  README.md  test.v  v.mod
vala/: Makefile  README.md  main.vala  r2pipe.pc.acr  r2pipe.vala  tests.vala
vim/: Makefile  README.md  r2pipe.vim
websocket/: Makefile  index.html  r2.js  r2ws.js  ws.py
zig/: Makefile  README.md  build.zig  main.zig
(+220 files in other folders)
