cabal-version:       >=1.10

name:                r2pipe
version:             0.1.0.0
synopsis:            Pipe interface for radare2
license-file:        LICENSE
author:              radareorg
maintainer:          info@florianmaerkl.de
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     R2Pipe
  other-modules:
  build-depends:       base >=4.13 && <4.14,
                       HTTP, aeson, process, bytestring
  default-language:    Haskell2010
