cabal-version:       >=1.10

name:                r2pipe
version:             0.1.0.0
synopsis:            Pipe interface for radare2
license-file:        LICENSE
author:              radareorg
build-type:          Simple

library
  exposed-modules:     R2Pipe
  other-modules:
  build-depends:       base >=4.12 && <5,
                       HTTP, aeson, process, bytestring
  default-language:    Haskell2010

executable example
  main-is:             example_r2pipe.hs 
  other-modules:       R2Pipe
  build-depends:       base >= 4.12 && <5,
                       r2pipe, HTTP, aeson, process, bytestring

